styles.css
/* ... */
#tool_bar {
  display: flex;
  justify-content: stretch;
  align-items: stretch;
  width: 70%;
}

#next_button button,
#back_button button {
  padding: 0.5rem 2rem;
}



/* CSV UPLOAD */


input {
  font-size: 1.5rem;
  cursor: pointer;
}

#drop_zone {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  align-items: center;
  justify-content: center;
  border: 2px dashed;
  border-radius: 2rem;
  margin: 3rem 25%;
  padding: 1rem;
  font-size: 2rem;
  color: var(--midblue);
  position: relative;
}

#instructions {
  position: absolute;
  bottom: 2rem;
}

#drag_drop p {
  display: flex;
  color: var(--darkgrey);
  font-weight: 900;
  font-size: 3rem;
  text-align: center;
  margin: 0;
}

#drop_zone.hover,
#drop_zone.hover #drag_drop p {
  color: var(--white);
  background-color: var(--darkgrey);
}



/* SELECT CRITERIA */


#content {
  display: flex;
  flex: 1 0 auto;
  gap: 5rem;
}

.variables {
  color: var(--darkblue);
  text-align: center;
  font-size: 1.5rem;
  font-weight: 900;
 }

.criteria {
  position: sticky;
  top: 0;
  background-color: var(--white);
  padding: 10px 0;
  z-index: 10;
  margin: 0;
}

#column_names {
  display: flex;
  flex: 1 0 auto;
  flex-direction: column;
  margin: 1rem;
  width: 30%;
  margin-bottom: 3rem;
  gap: 1rem;
 }

#column_names ul,
#root_drop ul,
#additional_drop ul {
  display: flex;
  flex: 1 0 auto;
  flex-direction: column;
  justify-content: flex-start;
  text-align: center;
  background-color: var(--white);
  gap: 1rem;
 }

.draggable_variables {
  background-color: var(--darkblue);
  color: var(--lightgrey);
  border-radius: 1rem;
  padding: 0.5rem 0;
  overflow-wrap: normal;
  font-size: 1.2rem;
  text-align: center;
  cursor: pointer;
}

.drag_gap {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  color: var(--darkgrey);
  font-size: 1.5rem;
  padding: 7rem 0rem;
  text-align: center;
  width: 30%;
}

#variable_drop {
  display: flex;
  flex: 1 0 auto;
  flex-direction: row;
  margin: 1rem;
  width: 50%;
  margin-bottom: 3rem;
  gap: 2rem;
}

#root_drop,
#additional_drop {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  height: auto;
  width: 50%;
  position: relative;
}

#root_drop ul,
#additional_drop ul {
  padding-bottom: 3.5rem;
}



/* CONSTRUCT METRIC  */


#main_metric {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  font-size: 1.3rem;
  padding: 2.5rem 0;
  margin: 0 8%;
  gap: 2rem;
}

#work_space {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  background-color: var(--darkblue);
  color: var(--lightgrey);
  border-radius: 2rem;
  padding: 2rem;
  width: 30%;
}

#criterion_selection {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1rem;
}

.final_criteria_root,
.final_criteria_additional {
  font-weight: 900;
}

.final_criteria_root > ul,
.final_criteria_additional > ul {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 1rem;
  color: var(--darkblue);
  font-weight: 900;
  text-wrap: wrap;
  flex-wrap: wrap;
}

.final_criteria_additional > ul {
  flex-direction: column;
}

.root_variable {
  background-color: var(--lightgrey);
  color: var(--darkblue);
  border-radius: 0.5rem;
  padding: 0.5rem;
  display: flex;
  flex: 1 0 auto;
}

#plot_space {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 70%;
  background-color: var(--lightgrey);
  border-radius: 2rem;
  border: 0.5rem solid var(--darkblue);
  box-sizing: border-box;
  padding: 2rem;
}

#user_inputs {
  /*background-color: var(--lightgrey);
  color: var(--darkblue);
  border-radius: 2rem;*/
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  text-align: right;
  /*padding: 2rem 2rem;
  gap: 2rem;*/
}

#weights {
  width: 100%;
  display: flex;
  flex-direction: column;
}

#add_weights {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.weight-container {
  background-color: var(--lightgrey);
  color: var(--darkblue);
  border-radius: 0.5rem;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: left;
  font-weight: 900;
}

.weight-container > .weight-label {
  margin: 0.75rem;
}

.weight-controls {
  display: flex;
  flex-direction: row;
  width: 100%;
}

#user_inputs > button {
  margin-left: auto;
}

input {
  vertical-align: middle;
}

.slider {
  box-sizing: border-box;
  margin: 0.75rem;
  flex-grow: 1;
  min-width: 0;
}

.number_text_box {
  box-sizing: border-box;
  margin: 0.75rem;
  flex-grow: 1;
  min-width: 0;
  font-size: 1.2em;
  font-family: inherit;
}

#sumbox{
  text-align: end;
  flex-grow: 1;
  display: flex;
  flex-direction: row;
  margin-left: auto;
  gap: 1rem;
}

#weight_buttons {
  display: flex;
  justify-content: space-between;
  flex-grow: 1;
  width: 100%;
}

#results_display {
  display: flex;
  flex-direction: column;
  flex: 1;
  width: 100%;
  box-sizing: border-box;
  padding: 2rem;
  min-height: 0;
  font-size: 1.7rem;
  text-align: center;
  color: var(--darkblue);
  font-weight: 600;
}

#results_display > p {
  margin: 0 0 2rem 0;
}

#chart_wrapper {
  position: relative;
  flex: 1;
  width: 100%;
  min-height: 0;
}

#histogramChart {
  width: 100%;
}



/* Reference  */


.reference {
  background-color: var(--lightgrey);
  color: var(--darkblue);
  font-weight: 900;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: space-around;
  align-items: stretch;
  width: 100%;
}

.citeMain {
  display: flex;
  flex: 1;
  width: 100%;
}

.cite, .paper {
  background-color: var(--lightgrey);
  padding: 5% 8%;
  flex: 1;
}

.cite {
  display: flex;
  flex-direction: column;
  flex: 1;
  justify-content: center;
  align-items: center;
}

.paper {
  display:flex;
  justify-content: center;
  align-items: center;
  max-width: 50%;
  padding-right: 0px;
}
/* ... */

